fixed position on button to not be hidden underneath any other divs

--- a/static/styles.css
+++ b/static/styles.css
@@ -194,7 +194,6 @@ h2 {
 .wall-lines {
     height: 100%;
     overflow: hidden;
-    z-index: 0;
        
 
 }
@@ -726,7 +725,8 @@ h2 {
     background-color: red;
     margin-top: -40%;
     text-align: center;
-    z-index: 1;
+    z-index: 999;
+    position: absolute;
    
 }
 
